# factorio-mods-localization

./: .dockerignore  .gitignore  Cargo.toml  DEVELOPMENT.md  Dockerfile  LICENSE  Procfile  README.md  Rocket.toml  deploy.sh  fly.toml  github_issue_tempalte.md  github_issue_template.md  index.js  index.mjs  package.json  todo.md
examples/: crowdin_download_english_file.rs  crowdin_download_translations.rs  github_clone_repository.rs  github_download_all_repositories.rs  github_fork_all_not_forked_repositories.rs  github_get_all_installations.rs  github_get_all_repositories.rs  github_get_my_repositories_with_locale_en.rs  github_is_default_branch_protected.rs  github_star_all_not_starred_repositories.rs  github_star_repository.rs  on_repository_added.rs
src/: base.js  base.mjs  cfg-parser.js  console-log-interceptor.js  console-log-interceptor.mjs  constants.js  constants.mjs  crowdin.js  crowdin.mjs  database.js  database.mjs  debug.js  debug.mjs  documentation.md  git_util.rs  github-app-auth-helper.js  github.js  github.mjs  github.rs  github_config.rs  github_mod_name.rs  github_repo_info.rs  lib.rs  main.js  main.mjs  main.rs  mod_directory.rs  myenv.rs  repository.js  repository.mjs  sentry.js  sentry.mjs  sentry.rs  utility.js  utility.mjs  webServer.js  webServer.mjs  webhooks.mjs  webhooks.rs
tests/: all_github_repositories_are_forked.rs  all_github_repositories_are_present_on_crowdin.rs  all_github_repositories_are_starred.rs  crowdin_github_matches.rs  crowdin_github_matches_english_files.rs  crowdin_github_matches_english_files_content.rs  (+9 more)
(+17 files in other folders)
